--- a/http-dev/html/chat/chat.html
+++ b/http-dev/html/chat/chat.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="chatWindow">
+    <textarea class="chat" cols="70" rows="10"></textarea>
+    <br>
+    <input type="text" class="say">
+</div>
 
-</body>
-</html>
+<div>
+    <ul class="userList">
+
+    </ul>
+</div>
